@@ -2,6 +2,8 @@
 Version: 0.3.3
 Date: ????
   Changes:
+      -The ingredient return on mining was being called no matter the setting thanks to Pezzawinkle
+      -Fixed dependecny checking for angels warehouse to work if no angels addon mods are loaded
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 2020-04-04
